stage-4/y.output
Grammar

    0 $accept: Program $end

    1 Program: DECL DeclList ENDDECL kBEGIN Slist kEND
    2        | DECL ENDDECL kBEGIN Slist kEND
    3        | kBEGIN Slist kEND
    4        | kBEGIN kEND

    5 DeclList: DeclList Decl
    6         | Decl

    7 Decl: Type VarList SEMICOLON

    8 Type: INT
    9     | STR

   10 VarList: VarList COMMA ID
   11        | VarList COMMA ID LSQBR NUM RSQBR
   12        | VarList COMMA ID LSQBR NUM RSQBR LSQBR NUM RSQBR
   13        | ID LSQBR NUM RSQBR
   14        | ID LSQBR NUM RSQBR LSQBR NUM RSQBR
   15        | MUL ID
   16        | MUL MUL ID
   17        | ID

   18 Slist: Slist Stmt SEMICOLON
   19      | Stmt SEMICOLON

   20 Stmt: InputStmt
   21     | OutputStmt
   22     | AssgStmt
   23     | IfStmt
   24     | WhileStmt

   25 InputStmt: READ LPAREN ID RPAREN
   26          | READ LPAREN ID LSQBR E RSQBR RPAREN
   27          | READ LPAREN ID LSQBR E RSQBR LSQBR E RSQBR RPAREN

   28 OutputStmt: WRITE LPAREN E RPAREN

   29 AssgStmt: ID ASSIGN E
   30         | ID LSQBR E RSQBR ASSIGN E
   31         | ID LSQBR E RSQBR LSQBR E RSQBR ASSIGN E
   32         | MUL ID ASSIGN E

   33 IfStmt: IF LPAREN E RPAREN THEN Slist ELSE Slist ENDIF
   34       | IF LPAREN E RPAREN THEN Slist ENDIF

   35 WhileStmt: WHILE LPAREN E RPAREN DO Slist ENDWHILE

   36 E: E PLUS E
   37  | E MINUS E
   38  | E MUL E
   39  | E DIV E
   40  | LPAREN E RPAREN
   41  | E LT E
   42  | E LE E
   43  | E GT E
   44  | E GE E
   45  | E EQ E
   46  | E NE E
   47  | NUM
   48  | STRING
   49  | ID LSQBR E RSQBR
   50  | ID LSQBR E RSQBR LSQBR E RSQBR
   51  | ADDRESS_OF ID
   52  | MUL ID
   53  | MUL LPAREN E RPAREN
   54  | ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 11 12 13 14 47
    ID (259) 10 11 12 13 14 15 16 17 25 26 27 29 30 31 32 49 50 51 52 54
    STRING (260) 48
    INT (261) 8
    STR (262) 9
    ADDRESS_OF (263) 51
    PLUS (264) 36
    MINUS (265) 37
    MUL (266) 15 16 32 38 52 53
    DIV (267) 39
    LT (268) 41
    LE (269) 42
    GT (270) 43
    GE (271) 44
    EQ (272) 45
    NE (273) 46
    LPAREN (274) 25 26 27 28 33 34 35 40 53
    RPAREN (275) 25 26 27 28 33 34 35 40 53
    ASSIGN (276) 29 30 31 32
    SEMICOLON (277) 7 18 19
    COMMA (278) 10 11 12
    RSQBR (279) 11 12 13 14 26 27 30 31 49 50
    LSQBR (280) 11 12 13 14 26 27 30 31 49 50
    kBEGIN (281) 1 2 3 4
    kEND (282) 1 2 3 4
    WRITE (283) 28
    READ (284) 25 26 27
    IF (285) 33 34
    THEN (286) 33 34
    ELSE (287) 33
    WHILE (288) 35
    ENDIF (289) 33 34
    ENDWHILE (290) 35
    DO (291) 35
    DECL (292) 1 2
    ENDDECL (293) 1 2


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Program (40)
        on left: 1 2 3 4
        on right: 0
    DeclList (41)
        on left: 5 6
        on right: 1 5
    Decl (42)
        on left: 7
        on right: 5 6
    Type (43)
        on left: 8 9
        on right: 7
    VarList (44)
        on left: 10 11 12 13 14 15 16 17
        on right: 7 10 11 12
    Slist (45)
        on left: 18 19
        on right: 1 2 3 18 33 34 35
    Stmt (46)
        on left: 20 21 22 23 24
        on right: 18 19
    InputStmt (47)
        on left: 25 26 27
        on right: 20
    OutputStmt (48)
        on left: 28
        on right: 21
    AssgStmt (49)
        on left: 29 30 31 32
        on right: 22
    IfStmt (50)
        on left: 33 34
        on right: 23
    WhileStmt (51)
        on left: 35
        on right: 24
    E (52)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 49 50 53


State 0

    0 $accept: • Program $end

    kBEGIN  shift, and go to state 1
    DECL    shift, and go to state 2

    Program  go to state 3


State 1

    3 Program: kBEGIN • Slist kEND
    4        | kBEGIN • kEND

    ID     shift, and go to state 4
    MUL    shift, and go to state 5
    kEND   shift, and go to state 6
    WRITE  shift, and go to state 7
    READ   shift, and go to state 8
    IF     shift, and go to state 9
    WHILE  shift, and go to state 10

    Slist       go to state 11
    Stmt        go to state 12
    InputStmt   go to state 13
    OutputStmt  go to state 14
    AssgStmt    go to state 15
    IfStmt      go to state 16
    WhileStmt   go to state 17


State 2

    1 Program: DECL • DeclList ENDDECL kBEGIN Slist kEND
    2        | DECL • ENDDECL kBEGIN Slist kEND

    INT      shift, and go to state 18
    STR      shift, and go to state 19
    ENDDECL  shift, and go to state 20

    DeclList  go to state 21
    Decl      go to state 22
    Type      go to state 23


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 24


State 4

   29 AssgStmt: ID • ASSIGN E
   30         | ID • LSQBR E RSQBR ASSIGN E
   31         | ID • LSQBR E RSQBR LSQBR E RSQBR ASSIGN E

    ASSIGN  shift, and go to state 25
    LSQBR   shift, and go to state 26


State 5

   32 AssgStmt: MUL • ID ASSIGN E

    ID  shift, and go to state 27


State 6

    4 Program: kBEGIN kEND •

    $default  reduce using rule 4 (Program)


State 7

   28 OutputStmt: WRITE • LPAREN E RPAREN

    LPAREN  shift, and go to state 28


State 8

   25 InputStmt: READ • LPAREN ID RPAREN
   26          | READ • LPAREN ID LSQBR E RSQBR RPAREN
   27          | READ • LPAREN ID LSQBR E RSQBR LSQBR E RSQBR RPAREN

    LPAREN  shift, and go to state 29


State 9

   33 IfStmt: IF • LPAREN E RPAREN THEN Slist ELSE Slist ENDIF
   34       | IF • LPAREN E RPAREN THEN Slist ENDIF

    LPAREN  shift, and go to state 30


State 10

   35 WhileStmt: WHILE • LPAREN E RPAREN DO Slist ENDWHILE

    LPAREN  shift, and go to state 31


State 11

    3 Program: kBEGIN Slist • kEND
   18 Slist: Slist • Stmt SEMICOLON

    ID     shift, and go to state 4
    MUL    shift, and go to state 5
    kEND   shift, and go to state 32
    WRITE  shift, and go to state 7
    READ   shift, and go to state 8
    IF     shift, and go to state 9
    WHILE  shift, and go to state 10

    Stmt        go to state 33
    InputStmt   go to state 13
    OutputStmt  go to state 14
    AssgStmt    go to state 15
    IfStmt      go to state 16
    WhileStmt   go to state 17


State 12

   19 Slist: Stmt • SEMICOLON

    SEMICOLON  shift, and go to state 34


State 13

   20 Stmt: InputStmt •

    $default  reduce using rule 20 (Stmt)


State 14

   21 Stmt: OutputStmt •

    $default  reduce using rule 21 (Stmt)


State 15

   22 Stmt: AssgStmt •

    $default  reduce using rule 22 (Stmt)


State 16

   23 Stmt: IfStmt •

    $default  reduce using rule 23 (Stmt)


State 17

   24 Stmt: WhileStmt •

    $default  reduce using rule 24 (Stmt)


State 18

    8 Type: INT •

    $default  reduce using rule 8 (Type)


State 19

    9 Type: STR •

    $default  reduce using rule 9 (Type)


State 20

    2 Program: DECL ENDDECL • kBEGIN Slist kEND

    kBEGIN  shift, and go to state 35


State 21

    1 Program: DECL DeclList • ENDDECL kBEGIN Slist kEND
    5 DeclList: DeclList • Decl

    INT      shift, and go to state 18
    STR      shift, and go to state 19
    ENDDECL  shift, and go to state 36

    Decl  go to state 37
    Type  go to state 23


State 22

    6 DeclList: Decl •

    $default  reduce using rule 6 (DeclList)


State 23

    7 Decl: Type • VarList SEMICOLON

    ID   shift, and go to state 38
    MUL  shift, and go to state 39

    VarList  go to state 40


State 24

    0 $accept: Program $end •

    $default  accept


State 25

   29 AssgStmt: ID ASSIGN • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 47


State 26

   30 AssgStmt: ID LSQBR • E RSQBR ASSIGN E
   31         | ID LSQBR • E RSQBR LSQBR E RSQBR ASSIGN E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 48


State 27

   32 AssgStmt: MUL ID • ASSIGN E

    ASSIGN  shift, and go to state 49


State 28

   28 OutputStmt: WRITE LPAREN • E RPAREN

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 50


State 29

   25 InputStmt: READ LPAREN • ID RPAREN
   26          | READ LPAREN • ID LSQBR E RSQBR RPAREN
   27          | READ LPAREN • ID LSQBR E RSQBR LSQBR E RSQBR RPAREN

    ID  shift, and go to state 51


State 30

   33 IfStmt: IF LPAREN • E RPAREN THEN Slist ELSE Slist ENDIF
   34       | IF LPAREN • E RPAREN THEN Slist ENDIF

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 52


State 31

   35 WhileStmt: WHILE LPAREN • E RPAREN DO Slist ENDWHILE

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 53


State 32

    3 Program: kBEGIN Slist kEND •

    $default  reduce using rule 3 (Program)


State 33

   18 Slist: Slist Stmt • SEMICOLON

    SEMICOLON  shift, and go to state 54


State 34

   19 Slist: Stmt SEMICOLON •

    $default  reduce using rule 19 (Slist)


State 35

    2 Program: DECL ENDDECL kBEGIN • Slist kEND

    ID     shift, and go to state 4
    MUL    shift, and go to state 5
    WRITE  shift, and go to state 7
    READ   shift, and go to state 8
    IF     shift, and go to state 9
    WHILE  shift, and go to state 10

    Slist       go to state 55
    Stmt        go to state 12
    InputStmt   go to state 13
    OutputStmt  go to state 14
    AssgStmt    go to state 15
    IfStmt      go to state 16
    WhileStmt   go to state 17


State 36

    1 Program: DECL DeclList ENDDECL • kBEGIN Slist kEND

    kBEGIN  shift, and go to state 56


State 37

    5 DeclList: DeclList Decl •

    $default  reduce using rule 5 (DeclList)


State 38

   13 VarList: ID • LSQBR NUM RSQBR
   14        | ID • LSQBR NUM RSQBR LSQBR NUM RSQBR
   17        | ID •

    LSQBR  shift, and go to state 57

    $default  reduce using rule 17 (VarList)


State 39

   15 VarList: MUL • ID
   16        | MUL • MUL ID

    ID   shift, and go to state 58
    MUL  shift, and go to state 59


State 40

    7 Decl: Type VarList • SEMICOLON
   10 VarList: VarList • COMMA ID
   11        | VarList • COMMA ID LSQBR NUM RSQBR
   12        | VarList • COMMA ID LSQBR NUM RSQBR LSQBR NUM RSQBR

    SEMICOLON  shift, and go to state 60
    COMMA      shift, and go to state 61


State 41

   47 E: NUM •

    $default  reduce using rule 47 (E)


State 42

   49 E: ID • LSQBR E RSQBR
   50  | ID • LSQBR E RSQBR LSQBR E RSQBR
   54  | ID •

    LSQBR  shift, and go to state 62

    $default  reduce using rule 54 (E)


State 43

   48 E: STRING •

    $default  reduce using rule 48 (E)


State 44

   51 E: ADDRESS_OF • ID

    ID  shift, and go to state 63


State 45

   52 E: MUL • ID
   53  | MUL • LPAREN E RPAREN

    ID      shift, and go to state 64
    LPAREN  shift, and go to state 65


State 46

   40 E: LPAREN • E RPAREN

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 66


State 47

   29 AssgStmt: ID ASSIGN E •
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    MUL    shift, and go to state 69
    DIV    shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    EQ     shift, and go to state 75
    NE     shift, and go to state 76

    $default  reduce using rule 29 (AssgStmt)


State 48

   30 AssgStmt: ID LSQBR E • RSQBR ASSIGN E
   31         | ID LSQBR E • RSQBR LSQBR E RSQBR ASSIGN E
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    MUL    shift, and go to state 69
    DIV    shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    EQ     shift, and go to state 75
    NE     shift, and go to state 76
    RSQBR  shift, and go to state 77


State 49

   32 AssgStmt: MUL ID ASSIGN • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 78


State 50

   28 OutputStmt: WRITE LPAREN E • RPAREN
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    MUL     shift, and go to state 69
    DIV     shift, and go to state 70
    LT      shift, and go to state 71
    LE      shift, and go to state 72
    GT      shift, and go to state 73
    GE      shift, and go to state 74
    EQ      shift, and go to state 75
    NE      shift, and go to state 76
    RPAREN  shift, and go to state 79


State 51

   25 InputStmt: READ LPAREN ID • RPAREN
   26          | READ LPAREN ID • LSQBR E RSQBR RPAREN
   27          | READ LPAREN ID • LSQBR E RSQBR LSQBR E RSQBR RPAREN

    RPAREN  shift, and go to state 80
    LSQBR   shift, and go to state 81


State 52

   33 IfStmt: IF LPAREN E • RPAREN THEN Slist ELSE Slist ENDIF
   34       | IF LPAREN E • RPAREN THEN Slist ENDIF
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    MUL     shift, and go to state 69
    DIV     shift, and go to state 70
    LT      shift, and go to state 71
    LE      shift, and go to state 72
    GT      shift, and go to state 73
    GE      shift, and go to state 74
    EQ      shift, and go to state 75
    NE      shift, and go to state 76
    RPAREN  shift, and go to state 82


State 53

   35 WhileStmt: WHILE LPAREN E • RPAREN DO Slist ENDWHILE
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    MUL     shift, and go to state 69
    DIV     shift, and go to state 70
    LT      shift, and go to state 71
    LE      shift, and go to state 72
    GT      shift, and go to state 73
    GE      shift, and go to state 74
    EQ      shift, and go to state 75
    NE      shift, and go to state 76
    RPAREN  shift, and go to state 83


State 54

   18 Slist: Slist Stmt SEMICOLON •

    $default  reduce using rule 18 (Slist)


State 55

    2 Program: DECL ENDDECL kBEGIN Slist • kEND
   18 Slist: Slist • Stmt SEMICOLON

    ID     shift, and go to state 4
    MUL    shift, and go to state 5
    kEND   shift, and go to state 84
    WRITE  shift, and go to state 7
    READ   shift, and go to state 8
    IF     shift, and go to state 9
    WHILE  shift, and go to state 10

    Stmt        go to state 33
    InputStmt   go to state 13
    OutputStmt  go to state 14
    AssgStmt    go to state 15
    IfStmt      go to state 16
    WhileStmt   go to state 17


State 56

    1 Program: DECL DeclList ENDDECL kBEGIN • Slist kEND

    ID     shift, and go to state 4
    MUL    shift, and go to state 5
    WRITE  shift, and go to state 7
    READ   shift, and go to state 8
    IF     shift, and go to state 9
    WHILE  shift, and go to state 10

    Slist       go to state 85
    Stmt        go to state 12
    InputStmt   go to state 13
    OutputStmt  go to state 14
    AssgStmt    go to state 15
    IfStmt      go to state 16
    WhileStmt   go to state 17


State 57

   13 VarList: ID LSQBR • NUM RSQBR
   14        | ID LSQBR • NUM RSQBR LSQBR NUM RSQBR

    NUM  shift, and go to state 86


State 58

   15 VarList: MUL ID •

    $default  reduce using rule 15 (VarList)


State 59

   16 VarList: MUL MUL • ID

    ID  shift, and go to state 87


State 60

    7 Decl: Type VarList SEMICOLON •

    $default  reduce using rule 7 (Decl)


State 61

   10 VarList: VarList COMMA • ID
   11        | VarList COMMA • ID LSQBR NUM RSQBR
   12        | VarList COMMA • ID LSQBR NUM RSQBR LSQBR NUM RSQBR

    ID  shift, and go to state 88


State 62

   49 E: ID LSQBR • E RSQBR
   50  | ID LSQBR • E RSQBR LSQBR E RSQBR

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 89


State 63

   51 E: ADDRESS_OF ID •

    $default  reduce using rule 51 (E)


State 64

   52 E: MUL ID •

    $default  reduce using rule 52 (E)


State 65

   53 E: MUL LPAREN • E RPAREN

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 90


State 66

   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   40  | LPAREN E • RPAREN
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    MUL     shift, and go to state 69
    DIV     shift, and go to state 70
    LT      shift, and go to state 71
    LE      shift, and go to state 72
    GT      shift, and go to state 73
    GE      shift, and go to state 74
    EQ      shift, and go to state 75
    NE      shift, and go to state 76
    RPAREN  shift, and go to state 91


State 67

   36 E: E PLUS • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 92


State 68

   37 E: E MINUS • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 93


State 69

   38 E: E MUL • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 94


State 70

   39 E: E DIV • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 95


State 71

   41 E: E LT • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 96


State 72

   42 E: E LE • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 97


State 73

   43 E: E GT • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 98


State 74

   44 E: E GE • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 99


State 75

   45 E: E EQ • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 100


State 76

   46 E: E NE • E

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 101


State 77

   30 AssgStmt: ID LSQBR E RSQBR • ASSIGN E
   31         | ID LSQBR E RSQBR • LSQBR E RSQBR ASSIGN E

    ASSIGN  shift, and go to state 102
    LSQBR   shift, and go to state 103


State 78

   32 AssgStmt: MUL ID ASSIGN E •
   36 E: E • PLUS E
   37  | E • MINUS E
   38  | E • MUL E
   39  | E • DIV E
   41  | E • LT E
   42  | E • LE E
   43  | E • GT E
   44  | E • GE E
   45  | E • EQ E
   46  | E • NE E

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    MUL    shift, and go to state 69
    DIV    shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    EQ     shift, and go to state 75
    NE     shift, and go to state 76

    $default  reduce using rule 32 (AssgStmt)


State 79

   28 OutputStmt: WRITE LPAREN E RPAREN •

    $default  reduce using rule 28 (OutputStmt)


State 80

   25 InputStmt: READ LPAREN ID RPAREN •

    $default  reduce using rule 25 (InputStmt)


State 81

   26 InputStmt: READ LPAREN ID LSQBR • E RSQBR RPAREN
   27          | READ LPAREN ID LSQBR • E RSQBR LSQBR E RSQBR RPAREN

    NUM         shift, and go to state 41
    ID          shift, and go to state 42
    STRING      shift, and go to state 43
    ADDRESS_OF  shift, and go to state 44
    MUL         shift, and go to state 45
    LPAREN      shift, and go to state 46

    E  go to state 104


State 82

   33 IfStmt: IF LPAREN E RPAREN • THEN Slist ELSE Slist ENDIF
   34       | IF LPAREN E RPAREN • THEN Slist ENDIF

    THEN  shift, and go to state 105


State 83

   35 WhileStmt: WHILE LPAREN E RPAREN • DO Slist ENDWHILE

    DO  shift, and go to state 106


State 84

    2 Program: DECL ENDDECL kBEGIN Slist kEND •

    $default  reduce using rule 2 (Program)


State 85

    1 Program: DECL DeclList ENDDECL kBEGIN Slist • kEND
   18 Slist: Slist • Stmt SEMICOLON
